Support for FinishUpGameView
