# src/CSharp/Server/Avalon.Domain/Contracts/Requests/CreateGameMissionRequestContract.cs
@@ -1,5 +1,5 @@
 ﻿namespace Avalon.Contracts.Requests;
-public class CreateGaneMissionRequestContract
+public class CreateGameMissionRequestContract
 {
     public long GameMissionId { get; set; }
     public byte FailCount { get; set; }
