# src/CSharp/Server/Avalon.Domain/Contracts/Requests/FinishGameRequestContract.cs
@@ -1,0 +1,7 @@
+﻿namespace Avalon.Contracts.Requests;
+public class FinishGameRequestContract
+{
+    
+    public long GameId { get; set; }
+    public long GuessMerlinProfileId { get; set; }
+}
